force-app/main/default/objects/Staff_Quarters_Request__c/Staff_Quarters_Request__c.object-meta.xml
<CustomObject>
    <label>Staff Quarters Request</label>
    <nameField>
        <displayFormat>SREQ-{0000000}</displayFormat>
        <label>Staff Quarters Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Quarters Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>