force-app/main/default/objects/Staff_Quarters_Request__c/fields/Admin_Director__c.field-meta.xml
<CustomField>
    <fullName>Admin_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Quarters_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>