force-app/main/default/objects/Staff_Quarters_Request__c/fields/Approved_by_HR_Lead__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_HR_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by HR Lead</label>
    <type>Checkbox</type>
</CustomField>