force-app/main/default/objects/Staff_Quarters_Request__c/fields/Approved_by_ReportingManager__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_ReportingManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by ReportingManager</label>
    <type>Checkbox</type>
</CustomField>