force-app/main/default/objects/Staff_Quarters_Request__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>