force-app/main/default/objects/Staff_Quarters_Request__c/fields/Employee_Salary__c.field-meta.xml
<CustomField>
    <fullName>Employee_Salary__c</fullName>
    <description>This salary Populated based on HCM salary Range</description>
    <inlineHelpText>HCM employee Salary</inlineHelpText>
    <label>Employee_Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>