force-app/main/default/objects/Staff_Quarters_Request__c/fields/HCM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>HCM_Approval_Status__c</fullName>
    <label>HCM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduction Request Initiated</fullName>
            </value>
            <value>
                <fullName>Deduction Request to Report Manager</fullName>
            </value>
            <value>
                <fullName>Deduction Request to Admin Director</fullName>
            </value>
            <value>
                <fullName>Deduction Request to HR Lead</fullName>
            </value>
            <value>
                <fullName>Deduction Approved</fullName>
            </value>
            <value>
                <fullName>Deduction Rejected</fullName>
            </value>
            <value>
                <fullName>Cancellation Request Initiated</fullName>
            </value>
            <value>
                <fullName>Cancellation Request to Report Manager</fullName>
            </value>
            <value>
                <fullName>Cancellation Request to Admin Director</fullName>
            </value>
            <value>
                <fullName>Cancellation Request to HR Lead</fullName>
            </value>
            <value>
                <fullName>Cancellation Approved</fullName>
            </value>
            <value>
                <fullName>Cancellation Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Request Initiated</fullName>
                <isActive>false</isActive>
                <label>Request Initiated</label>
            </value>
            <value>
                <fullName>Request to Admin Director</fullName>
                <isActive>false</isActive>
                <label>Request to Admin Director</label>
            </value>
            <value>
                <fullName>Request to HR Lead</fullName>
                <isActive>false</isActive>
                <label>Request to HR Lead</label>
            </value>
            <value>
                <fullName>Request to Report Manager</fullName>
                <isActive>false</isActive>
                <label>Request to Report Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>