force-app/main/default/objects/Staff_Quarters_Request__c/fields/HCM_Salary_Approval_CNF_Error__c.field-meta.xml
<CustomField>
    <fullName>HCM_Salary_Approval_CNF_Error__c</fullName>
    <label>HCM Salary Approval CNF Error</label>
    <type>TextArea</type>
</CustomField>