force-app/main/default/objects/Staff_Quarters_Request__c/fields/HR_Lead__c.field-meta.xml
<CustomField>
    <fullName>HR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Quarters_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>