force-app/main/default/objects/Staff_Quarters_Request__c/fields/Is_HCM_Salary_Deduction_CNF__c.field-meta.xml
<CustomField>
    <fullName>Is_HCM_Salary_Deduction_CNF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HCM Salary Deduction CNF</label>
    <type>Checkbox</type>
</CustomField>