force-app/main/default/objects/Staff_Quarters_Request__c/fields/Quarters_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Quarters_Request_Type__c</fullName>
    <label>Quarters Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>