force-app/main/default/objects/Staff_Quarters_Request__c/fields/Remark_HCM_Salary_Deduction_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Remark_HCM_Salary_Deduction_Cancellation__c</fullName>
    <label>Remark HCM Salary Deduction Cancellation</label>
    <type>TextArea</type>
</CustomField>