force-app/main/default/objects/Staff_Quarters_Request__c/fields/Room_Request_For__c.field-meta.xml
<CustomField>
    <fullName>Room_Request_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Request For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Quarters_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>