force-app/main/default/objects/Staff_Quarters_Request__c/fields/Staff_Quarters_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_Quarters_Joining_Date__c</fullName>
    <label>Staff Quarters Joining Date</label>
    <type>Date</type>
</CustomField>