force-app/main/default/objects/Staff_Quarters_Request__c/fields/Staff_Quarters_Room__c.field-meta.xml
<CustomField>
    <fullName>Staff_Quarters_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Quarters Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <valueField>Staff_Quarters_Room__c.Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Staff_Quarters_Room__c.Availability__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Staff_Quarters_Room__c</referenceTo>
    <relationshipLabel>Staff Quarters Requests</relationshipLabel>
    <relationshipName>Staff_Quarters_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>