force-app/main/default/objects/Staff_Quarters_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Room Allotted</fullName>
            </value>
            <value>
                <fullName>Request Submitted</fullName>
                <default>true</default>
                <label>Request Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Vacation Initiated</fullName>
                <label>Vacating Initiated</label>
            </value>
            <value>
                <fullName>Vacation Completed</fullName>
                <label>Vacating Completed</label>
            </value>
            <value>
                <fullName>Vacation Approved</fullName>
                <label>Vacating Approved</label>
            </value>
            <value>
                <fullName>Vacation Rejected</fullName>
                <label>Vacating Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>