force-app/main/default/objects/Staff_Quarters_Request__c/fields/Vacation_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Initiated_Date__c</fullName>
    <label>Vacating Initiated Date</label>
    <type>Date</type>
</CustomField>