force-app/main/default/objects/Staff_Quarters_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vacation_Date__c</columns>
    <columns>Staff_Quarters_Joining_Date__c</columns>
    <columns>Room_Request_For__c</columns>
    <columns>Admin_Director__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>